--- a/index.html
+++ b/index.html
@@ -8,29 +8,33 @@
 </head>
 <body>
     <div id="appContainer">
+
         <div class="container">
             <form action="">
+                <h1>Login</h1>
                 <div class="inputGroup">
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name" placeholder="">
                 </div>
 
                 <div class="inputGroup">
-                    <label for="email">Nome</label>
+                    <label for="email">Email</label>
                     <input type="text" name="email" id="email" placeholder="">
                 </div>
 
-                <div class="inputGroup">
-                    <button type="submit">Login</button>
+                <div class="inputGroup duble">
+                    <button type="submit">Login</button>   
                 </div>
+                 <a href="">Esqueceu sua senha?</a>
             </form>
         </div>
 
         <footer>
             <ul class="links">
-                <l><a href="">Home</a></l>
-                <l><a href="">Contactos</a></l>
-                <l><a href="">Politicas</a></l>
+                <li><a href="">Home</a></li>
+                <li><a href="">Login</a></li>
+                <li><a href="">Imagens</a></li>
+                <li><a href="">Politicas</a></li>
             </ul>
         </footer>
     </div>
